<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_margin="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        />

    <ImageView
        android:id="@+id/iv_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/doctro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_welcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif-medium"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/iv_doctor"
        />
    <EditText
        android:id="@+id/et_emailAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:drawableEnd="@drawable/email"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/green"
        android:layout_below="@id/tv_welcom"
        />
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:drawableEnd="@drawable/eye"
        android:textColorHint="@color/gray"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/green"
        android:layout_below="@+id/et_emailAdd"
        />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pass"
        android:layout_marginTop="2dp"
        android:checked="true"
        android:text="@string/Remember"
        android:textSize="12sp"
        android:textColor="@color/gray"
        />
    <TextView
        android:id="@+id/tv_fogetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPass"
        android:textSize="12sp"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif-medium"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:layout_alignBaseline="@+id/cb_remember"
        />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_below="@+id/cb_remember"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentence"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:layout_below="@+id/btn_start"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_alignBaseline="@+id/tv_sentence"
        android:layout_toRightOf="@+id/tv_sentence"
        android:layout_marginLeft="5dp"
        android:focusable="true"
        />
</RelativeLayout>