<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:padding="25dp"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="end"
        />

    <ImageView
        android:id="@+id/iw_inbord1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/inbord1"
        android:layout_marginTop="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/onbord1text"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_par1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onbordpar"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:paddingLeft="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/textparagrah"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circle"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        />

</LinearLayout>