<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user"
        android:layout_marginTop="30dp"
        android:paddingLeft="25dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="80dp"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/myname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/myname"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/myemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myemail"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/textparagrah"
            android:textSize="8sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/specialize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Specializations"
        android:paddingLeft="25dp"
        android:layout_marginTop="50dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/iv_user"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="220dp"
        >

        <ImageView
            android:id="@+id/iv_eyes"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/eyes"
            />
        <ImageView
            android:id="@+id/iv_Intestine"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/intestine"
            android:layout_marginLeft="38dp"
            />
        <ImageView
            android:id="@+id/iv_teeth"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/teeth"
            android:layout_marginLeft="38dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="320dp">

        <TextView
            android:id="@+id/tv_eyes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/eyes"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginRight="70dp"
            />
        <TextView
            android:id="@+id/tv_intestine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intestine"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginRight="75dp"
            />
        <TextView
            android:id="@+id/tv_teeth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teeth"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="12sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="370dp"
        >

        <ImageView
            android:id="@+id/iv_lungs"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/lungs"
            />
        <ImageView
            android:id="@+id/iv_brain"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/brain"
            android:layout_marginLeft="38dp"
            />
        <ImageView
            android:id="@+id/iv_kidnys"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/kidnys"
            android:layout_marginLeft="38dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="470dp">

        <TextView
            android:id="@+id/tv_lungs"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/lungs"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginRight="96dp"
            />
        <TextView
            android:id="@+id/tv_brain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brain"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginRight="85dp"
            />
        <TextView
            android:id="@+id/tv_kidnys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kidnys"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="12sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/Top_caregivers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Top_caregivers"
        android:layout_marginTop="540dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:paddingLeft="25dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="610dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_top1"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:src="@drawable/top1"
            android:layout_marginRight="35dp"
            />
        <ImageView
            android:id="@+id/iv_top2"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:src="@drawable/top2"
            android:layout_marginRight="40dp"
            />
        <ImageView
            android:id="@+id/iv_top3"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:src="@drawable/top3"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="720dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/home"
            android:layout_marginRight="95dp"
            />
        <ImageView
            android:id="@+id/iv_calender"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/calendar"
            android:layout_marginRight="95dp"
            />
        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile"
            />
    </LinearLayout>
</RelativeLayout>
